--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
             {
                 id: 1,
                 title: '[재귀함수] 반복문을 이용한 1부터 100까지의 합과 곱(반복문)',
-                link: '1_a.html'
+                link: '01_for.html'
             },
             {
                 id: 2,
                 title: '[재귀함수] 재귀함수를 이용한 1부터 100가지의 합과 곱(재귀함수)',
-                link: '2_b.html'
+                link: '02_b.html'
             },
             {
                 id: 3,
                 title: '[재귀함수] 2진수 변환',
-                link: '3_c.html'
+                link: '03_c.html'
             },
             {
                 id: 4,
