[재귀함수] 재귀함수를 이용한 1부터 100가지의 합과 곱 - 재귀함수

--- a/01_for.html
+++ b/01_for.html
@@ -24,7 +24,7 @@
 
 // 더하기
 let s = 0;
-for (var let i= 1; i < 101; i++){
+for (let i= 1; i < 101; i++){
     s += i;
 }
 // O(n) : 입력 데이터 크기에 비례해서 처리 시간이 걸리는 알고리즘
@@ -32,8 +32,8 @@ console.log(s);
 
 //곱하기 : 시작이 0이 아닌 1이고 i에 +가 아닌 *임에 유의
 let m = 1;
-for (var let i= 1; i < 6; i++){
-    s *= i;
+for (let i= 1; i < 6; i++){
+    m *= i;
 }
 
 
