--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             {
                 id: 2,
                 title: '[재귀함수] 재귀함수를 이용한 1부터 100가지의 합과 곱(재귀함수)',
-                link: '02_b.html'
+                link: '02.html'
             },
             {
                 id: 3,
