--- a/index.html
+++ b/index.html
@@ -35,37 +35,37 @@
             {
                 id: 3,
                 title: '[재귀함수] 2진수 변환',
-                link: '03_c.html'
+                link: '03.html'
             },
             {
                 id: 4,
                 title: '[재귀함수] 각 자릿수의 합',
-                link: '4_d.html'
+                link: '04.html'
             },
             {
                 id: 5,
                 title: '[재귀함수] 피보나치',
-                link: '5_e.html'
+                link: '05.html'
             },
             {
                 id: 6,
                 title: '[재귀함수] 피보나치',
-                link: '6_f.html'
+                link: '06.html'
             },
             {
                 id: 7,
                 title: '최솟값과 최댓값 구하기',
-                link: '7_.html'
+                link: '07.html'
             },
             {
                 id: 8,
                 title: '최솟값과 최댓값 - reduce',
-                link: '8_.html'
+                link: '08.html'
             },
             {
                 id: 9,
                 title: '[정렬] 정렬이론',
-                link: '9_.html'
+                link: '09.html'
             },
             {
                 id: 10,
