--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
             },
             {
                 id: 4,
-                title: '[재귀함수] 각 자릿수의 합',
+                title: '[재귀함수] 문자열 뒤집기',
                 link: '04.html'
             },
             {
                 id: 5,
-                title: '[재귀함수] 피보나치',
+                title: '[재귀함수] 각 자릿수의 합',
                 link: '05.html'
             },
             {
@@ -54,48 +54,53 @@
             },
             {
                 id: 7,
-                title: '최솟값과 최댓값 구하기',
+                title: '[재귀함수] 피보나치',
                 link: '07.html'
             },
             {
                 id: 8,
-                title: '최솟값과 최댓값 - reduce',
+                title: '최솟값과 최댓값 구하기',
                 link: '08.html'
             },
             {
                 id: 9,
-                title: '[정렬] 정렬이론',
+                title: '최솟값과 최댓값 - reduce',
                 link: '09.html'
             },
             {
                 id: 10,
-                title: '[정렬] 선택정렬',
-                link: '10_.html'
+                title: '[정렬] 정렬이론',
+                link: '10.html'
             },
             {
                 id: 11,
-                title: '[정렬] 삽입정렬',
-                link: '11_.html'
+                title: '[정렬] 선택정렬',
+                link: '11.html'
             },
             {
                 id: 12,
-                title: '[정렬] 병합정렬',
-                link: '12_.html'
+                title: '[정렬] 삽입정렬',
+                link: '12.html'
             },
             {
                 id: 13,
-                title: '[정렬] 퀵정렬',
-                link: '13_.html'
+                title: '[정렬] 병합정렬',
+                link: '13.html'
             },
             {
                 id: 14,
-                title: '트리와 그래프',
-                link: '14_.html'
+                title: '[정렬] 퀵정렬',
+                link: '14.html'
             },
             {
                 id: 15,
+                title: '트리와 그래프',
+                link: '15.html'
+            },
+            {
+                id: 16,
                 title: '깊이우선 탐색과 너비우선 탐색_이론',
-                link: '15_.html'
+                link: '16.html'
             },
         ];
 
