풀이 주석 추가

--- a/05.html
+++ b/05.html
@@ -40,6 +40,27 @@
     }
     console.log(문자열역순('1231233'));
 
+    // 문자열역순('1231233')  문자[6] + 문자열역순(문자.slice(0, 6))
+    // 문자열역순('1231233')  '3' + 문자열역순('123123')  -> 1231233
+
+    // 문자열역순('123123')  문자[5] + 문자열역순(문자.slice(0, 5))
+    // 문자열역순('123123')  '3' + 문자열역순('12312')  -> 123123
+
+    // 문자열역순('12312')  문자[4] + 문자열역순(문자.slice(0, 4))
+    // 문자열역순('12312')  '2' + 문자열역순('1231')  -> 12312
+
+    // 문자열역순('1231')  문자[3] + 문자열역순(문자.slice(0, 2))
+    // 문자열역순('1231')  '1' + 문자열역순('123')    -> 1231
+
+    // 문자열역순('123')  문자[2] + 문자열역순(문자.slice(0, 2))
+    // 문자열역순('123')  '3' + 문자열역순('12')      -> 123
+
+    // 문자열역순('12')  문자[1] + 문자열역순(문자.slice(0, 1))
+    // 문자열역순('12')  '2' + 문자열역순('1')      -> 12
+
+    // 문자열역순('1')  문자[0]
+    // 문자열역순('1')  '1'       ->  1
+
 </script>
 </body>
 </html>
