--- a/09.html
+++ b/09.html
@@ -13,19 +13,19 @@
     <p class="explanation">삽입정렬은 선택정렬보다 빠름.</p>
     <p class="explanation">삽입정렬은 필요한 아이템만 스캔을 하기 때문.</p>
     <p class="explanation">하지만 선택정렬과 삽입정렬의 시간복잡도는  동일하게 O(n^2)임</p>
-    <img src="./img/선택정렬1.png" alt="피보나치순열">
-    <img src="./img/선택정렬2.png" alt="피보나치순열">
-    <img src="./img/선택정렬3.png" alt="피보나치순열">
-    <img src="./img/선택정렬4.png" alt="피보나치순열">
-    <img src="./img/선택정렬5.png" alt="피보나치순열">
-    <img src="./img/선택정렬6.png" alt="피보나치순열">
-    <img src="./img/선택정렬7.png" alt="피보나치순열">
-    <img src="./img/선택정렬8.png" alt="피보나치순열">
-    <img src="./img/선택정렬9.png" alt="피보나치순열">
-    <img src="./img/선택정렬10.png" alt="피보나치순열">
-    <img src="./img/선택정렬11.png" alt="피보나치순열">
-    <img src="./img/선택정렬12.png" alt="피보나치순열">
-    <img src="./img/선택정렬13.png" alt="피보나치순열">
+    <img src="./img/선택정렬1.png" alt="선택정렬">
+    <img src="./img/선택정렬2.png" alt="선택정렬">
+    <img src="./img/선택정렬3.png" alt="선택정렬">
+    <img src="./img/선택정렬4.png" alt="선택정렬">
+    <img src="./img/선택정렬5.png" alt="선택정렬">
+    <img src="./img/선택정렬6.png" alt="선택정렬">
+    <img src="./img/선택정렬7.png" alt="선택정렬">
+    <img src="./img/선택정렬8.png" alt="선택정렬">
+    <img src="./img/선택정렬9.png" alt="선택정렬">
+    <img src="./img/선택정렬10.png" alt="선택정렬">
+    <img src="./img/선택정렬11.png" alt="선택정렬">
+    <img src="./img/선택정렬12.png" alt="선택정렬">
+    <img src="./img/선택정렬13.png" alt="선택정렬">
     <p class="explanation">참고 : https://www.youtube.com/watch?v=Bor_CRWEIXo</p>
     <p class="explanation">참고 : https://www.youtube.com/watch?v=uCUu3fF5Dws</p>
 
