--- a/10.html
+++ b/10.html
@@ -62,7 +62,7 @@
     for (let i = 0; i < 배열의길이; i++){
         삽입값 = 입력값.shift()
         인덱스 = 삽입값이들어갈인덱스(정렬된배열, 삽입값)
-        // replace할게 아닌 삽입할 것이므로 splice두번째는 0
+        // replace할게 아닌 삽입할 것이므로 splice두번째 인자는 0
         정렬된배열.splice(인덱스, 0, 삽입값);
         console.log(`인덱스 : ${인덱스}`)
         console.log(`정렬된배열 : ${정렬된배열}`)
