--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             },
             {
                 id: 2,
-                title: '[재귀함수] 재귀함수를 이용한 1부터 100가지의 합과 곱(재귀함수)',
+                title: '[재귀함수] 재귀함수를 이용한 1부터 100가지의 합과 곱(재귀함수)- O(n), O(1)',
                 link: '02.html'
             },
             {
@@ -64,38 +64,33 @@
             },
             {
                 id: 9,
-                title: '[정렬] 정렬이론',
+                title: '[정렬] 선택정렬 - O(n^2)',
                 link: '9.html'
             },
             {
                 id: 10,
-                title: '[정렬] 선택정렬',
+                title: '[정렬] 삽입정렬 - O(n^2)',
                 link: '10.html'
             },
             {
                 id: 11,
-                title: '[정렬] 삽입정렬',
+                title: '[정렬] 병합정렬 - O(n log n)',
                 link: '11.html'
             },
             {
                 id: 12,
-                title: '[정렬] 병합정렬',
+                title: '[정렬] 퀵정렬',
                 link: '12.html'
             },
             {
                 id: 13,
-                title: '[정렬] 퀵정렬',
+                title: '트리와 그래프',
                 link: '13.html'
             },
             {
                 id: 14,
-                title: '트리와 그래프',
-                link: '14.html'
-            },
-            {
-                id: 15,
                 title: '깊이우선 탐색과 너비우선 탐색_이론',
-                link: '15.html'
+                link: '14.html'
             },
         ];
 
