--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             },
             {
                 id: 12,
-                title: '[정렬] 퀵정렬',
+                title: '[정렬] 퀵정렬 - worst: O(n log2n), best:O(n**2)',
                 link: '12.html'
             },
             {
