명확하게 표현하기 위해 텍스트 추가

--- a/05.html
+++ b/05.html
@@ -21,12 +21,12 @@
             break;
         }
         let y = x.split('');
-        console.log(y);
+        console.log(`y는 ${y}`);
         result += parseInt(y.pop(), 10);
         x = y.join('');
-        console.log(x);
+        console.log(`x는 ${x}`);
     }
-    console.log(result);
+    console.log(`result는 ${result}`);
 
 
 
