--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         const dataList = [
             {
                 id: 1,
-                title: '[재귀함수] 반복문을 이용한 1부터 100까지의 합과 곱(반복문)',
+                title: '[재귀함수] 반복문을 이용한 1부터 100까지의 합(시그마)과 곱(팩토리얼)(반복문)',
                 link: '01_for.html'
             },
             {
                 id: 2,
-                title: '[재귀함수] 재귀함수를 이용한 1부터 100가지의 합과 곱(재귀함수)- O(n), O(1)',
+                title: '[재귀함수] 재귀함수를 이용한 1부터 100가지의 합(sigma)과 곱(factorial)- O(n), O(1)',
                 link: '02.html'
             },
             {
