15.블럭탑쌓기

--- a/index.html
+++ b/index.html
@@ -91,7 +91,22 @@
                 id: 14,
                 title: '하노이의 탑',
                 link: '14.html'
-            }
+            },
+            {
+                id: 15,
+                title: '블럭탑쌓기',
+                link: '15.html'
+            },
+            {
+                id: 16,
+                title: '',
+                link: '16.html'
+            },
+            {
+                id: 17,
+                title: '',
+                link: '17.html'
+            },
         ];
 
         // 1. for
