--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-family:-apple-system,BlinkMacSystemFont,"Malgun Gothic","맑은 고딕",helvetica,"Apple SD Gothic Neo",sans-serif;
             background:#d0d0d0;}
         h1 {padding:1em;color:#444;}
-        li {padding:1.1em 1.125em 1.1em 0; list-style:none;}
+        li {padding:0.6em 1.125em 0.6em 0; list-style:none;}
         a {color:#434a58; text-decoration:none;}
         a:hover {font-weight:700; color:#444;}
     </style>
@@ -99,7 +99,7 @@
             },
             {
                 id: 16,
-                title: '',
+                title: '악수 횟수',
                 link: '16.html'
             },
             {
