코드 이미지 추가

--- a/01_for.html
+++ b/01_for.html
@@ -8,8 +8,9 @@
     <link href="./common.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <img class="code" src="./img/1.png" alt="">
     <p class="tit">O(n)</p>
-    <p class="explanation">입력 데이터 크기에 상관없이 언제나 일정한 시간이 걸리는 알고리즘</p>
+    <p class="explanation">입력 데이터 크기에 상관없이 언제나 일정한 시간이 걸리는 알고리즘</p> 
     <img src="./img/Big-0_o(n)_1.png" alt="빅오 o(n)">
     <img src="./img/Big-0_o(n)_2.png" alt="빅오 o(n)">
     <img src="./img/Big-0_o(n)_3.png" alt="빅오 o(n)">
