--- a/03.html
+++ b/03.html
@@ -8,6 +8,7 @@
     <link href="./common.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <img class="code" src="./img/3.png" alt="">
 <script>
     // 재귀함수 사례 - 2진수 변환
     //  2   11  1
