--- a/02.html
+++ b/02.html
@@ -8,6 +8,8 @@
     <link href="./common.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <img class="code" src="./img/2_1.png" alt="">
+    <img class="code" src="./img/2_2.png" alt="">
 <script>
 // 반복문 : 1부터 시작(밑에서부터 위로 올라가는 방식)
 let s = 0;
