18 골드바흐의 추측

--- a/03.html
+++ b/03.html
@@ -8,7 +8,8 @@
     <link href="./common.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <img class="code" src="./img/3.png" alt="">
+    <img class="code" src="./img/3_1.png" alt="">
+    <img class="code" src="./img/3_2.png" alt="">
 <script>
     // 재귀함수 사례 - 2진수 변환
     //  2   11  1
