--- a/04.html
+++ b/04.html
@@ -8,6 +8,8 @@
     <link href="./common.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <img class="code" src="./img/4_1.png" alt="">
+    <img class="code" src="./img/4_2.png" alt="">
 <script>
     // 반복문
 
