--- a/06.html
+++ b/06.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <p class="tit">피보나치순열</p>
+    <img class="code" src="./img/6.png" alt="">
     <p class="explanation"></p>
     <img src="./img/Big-o_fibonacci_1.png" alt="피보나치순열">
     <img src="./img/Big-o_fibonacci_2.png" alt="피보나치순열">
