--- a/index.html
+++ b/index.html
@@ -107,6 +107,26 @@
                 title: '버스 시간표',
                 link: '17.html'
             },
+            {
+                id: 18,
+                title: '골드바흐파티션',
+                link: '18.html'
+            },
+            {
+                id: 19,
+                title: '',
+                link: '19.html'
+            },
+            {
+                id: 20,
+                title: '',
+                link: '20.html'
+            },
+            {
+                id: 21,
+                title: '',
+                link: '21.html'
+            },
         ];
 
         // 1. for
