--- a/07.html
+++ b/07.html
@@ -8,6 +8,7 @@
     <link href="./common.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <img class="code" src="./img/7.png" alt="">
 <script>
     // 최솟값과 최댓값
     let a = [10, 20, 30, 1, 2, 3, 5, 9, 11]
