소스 이미지 추가

--- a/10.html
+++ b/10.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <p class="tit">삽입정렬</p>
+    <img class="code" src="./img/10.png" alt="">
     <p class="explanation">선택정렬은 전체 모든 아이템을 스캔함</p>
     <p class="explanation">삽입정렬은 선택정렬보다 빠름.</p>
     <p class="explanation">삽입정렬은 필요한 아이템만 스캔을 하기 때문.</p>
