--- a/11.html
+++ b/11.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <p class="tit">병합정렬 - O(n log n)</p>
+    <img class="code" src="./img/11.png" alt="">
     <p class="explanation">병합정렬은 별도의 저장공간을 필요로 하기 때문에 공간을 사용할 수 없는 경우에는 퀵정렬을 이용해야 함</p>
     <img src="./img/병합정렬1.png" alt="병합정렬">
     <p class="explanation">참고 : https://www.youtube.com/watch?v=QAyl79dCO_k&t=235s</p>
