--- a/14.html
+++ b/14.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <p class="tit">하노이의 탑</p>
+    <img class="code" src="./img/14_1.png" alt="">
+    <img class="code" src="./img/14_2.png" alt="">
 <script>
     const route = [];
 
