--- a/12.html
+++ b/12.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <p class="tit">퀵정렬</p>
+    <img class="code" src="./img/12.png" alt="">
     <p class="explanation">병합정렬과 다른점은 pivot값을 사용한다는 것</p>
     <p class="explanation">병합정렬은 별도의 저장공간을 필요로 하기 때문에 공간을 사용할 수 없는 경우에는 퀵정렬을 이용해야 함</p>
     <img src="./img/퀵정렬1.png" alt="퀵정렬">
