넓이, 깊이 우선 탐색 추가

--- a/13.html
+++ b/13.html
@@ -27,14 +27,16 @@
     <p class="explanation">         이를 보완해주는 것이 레드블랙트리이다.</p>
     <p class="explanation">1. 트리의 모든 노드는 검정색 아니면 빨간색이다.</p>
     <p class="explanation">2. 루트 노드는 무조건 검정색이다.</p>
-    <p class="explanation">3. 모든 잎 노드는 검정색이다.</p>
+    <p class="explanation">3. 모든 잎 노드는 검정색이다.</p>    
     <p class="explanation">4. 빨간색의 노드 자식들은 모두 검정색이지만, 검정색 노드 자식들은 어느 색깔이든 상관없다.</p>
     <p class="explanation">5. 루트 노드에서 모든 잎 노드 사이에 있는 검정색 노드의 수는 모두 동일하다.</p>
     <p class="explanation"></p>
     <p class="explanation">그래프 알고리즘 : BFS(넓이 우선 탐색), DFS(깊이 우선 탐색)</p>
-    <p class="explanation">BFS(넓이 우선 탐색) : 가까운 정점을 먼저 방문, 먼 정점은 나중에 방문함.</p>
-    <p class="explanation">DFS(깊이 우선 탐색) : 현재 정점에서 한 방향으로 가면서 검사함. 막힌 정점은 포기하고 마지막에 따라온 간선으로 되돌아 간다.</p>
-        function makingFree (arr, root, i){
+    <p class="explanation">BFS(넓이 우선 탐색)-Queue : FIFO 가까운 정점을 먼저 방문, 먼 정점은 나중에 방문함. 형제 탐색</p>
+    <p class="explanation">DFS(깊이 우선 탐색 Depth First Search)-stack : FILO 현재 정점에서 한 방향으로 가면서 검사함. 막힌 정점은 포기하고 마지막에 따라온 간선으로 되돌아 간다.</p>
+    <img class="code" src="./img/13.png" alt="">
+    <p class="explanation">
+    function makingFree (arr, root, i){
             if(i < arr.length){
                 root = new Node(arr[i]);    // Node 만들기
                 root.left = makingTree(arr, root.left, 2 * i + 1)   // left값 넣기
@@ -42,15 +44,54 @@
                 turn root   // Node 반환 (재귀! : 재귀함수는 반드시 종료조건!)
             }
         }
-    <p class="explanation"></p>
-    <p class="explanation"></p>
-    <p class="explanation"></p>
-    <p class="explanation"></p>
-    <p class="explanation"></p>
-    <p class="explanation"></p>
+    </p>
 <script>
+    graph = {'E': ['D', 'A'],
+        'F': ['D'],
+        'A': ['E', 'C', 'B'],
+        'B': ['A'],
+        'C': ['A'],
+        'D': ['E','F']
+    }
 
+    //  DFS(깊이 우선 탐색 Depth First Search)-stack : FILO 
+    function dfs(graph, start){
+        let visited = []; // 방문된 노드들이 저장되는 하나의 array
+        let stack = [start];
 
+        while(stack.length != 0){
+            let n = stack.pop();
+            // 혹시라도 n이 방문된 노드라면 
+            // if문을 수행할 필요 없고 다음 pop으로 넘어가면 된다.
+            if(!visited.includes(n)){ 
+                visited.push(n);
+                let sub = graph[n].filter(x => !visited.includes(x));
+                for(let i of sub){
+                    stack.push(i);
+                }
+            }
+        }
+        return visited;
+    }
+
+    // BFS(넓이 우선 탐색)-Queue : FIFO
+    function dfs(graph, start){
+        let visited = [];
+        let queue = [start];
+
+        while(queue.length != 0){
+            // 깊이 우선 탐색과 비교하여 pop -> shift 차이만 있음
+            let n = queue.pop();  
+            if(!visited.includes(n)){
+                visited.push(n);
+                let sub = graph[n].filter(x => !visited.includes(x));
+                for(let i of sub){
+                    queue.push(i);
+                }
+            }
+        }
+        return visited;
+    }
 </script>
 </body>
 </html>
