--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             },
             {
                 id: 13,
-                title: '트리와 그래프',
+                title: '트리와 그래프 - 깊이, 거리 우선 탐색(최단, 최장 거리 탐색)',
                 link: '13.html'
             },
             {
