--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             },
             {
                 id: 19,
-                title: '',
+                title: '지뢰찾기',
                 link: '19.html'
             },
             {
