--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         let algorithmList = [];
         const dataList = [
             {
+                id: 0,
+                title: '스택 stack',
+                link: '00_stack.html'
+            },
+            {
                 id: 1,
                 title: '[재귀함수] 반복문을 이용한 1부터 100까지의 합(시그마)과 곱(팩토리얼)(반복문)',
                 link: '01_for.html'
