--- a/00_stack.html
+++ b/00_stack.html
@@ -12,7 +12,7 @@
     <p class="explanation">스택은 한 쪽 끝에서만 자료를 넣거나뺄 수 있는 선형 구조(LIFO)으로 되어 있다.</p>
     <p class="explanation">큐 Queue : 컴퓨터의 기본적인 자료 구조의 한가지로, 먼저 집어 넣은 데이터가 먼저 나오는 FIFO구조로 저장하는 형식을 말한다.</p>
 
-    <img src="./img/Big-o_o(1)_1.png" alt="빅오 o(1)">
+    <!-- <img src="./img/Big-o_o(1)_1.png" alt="빅오 o(1)"> -->
 <script>
 class Stack {
     constructor(){
